# jim

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyrightconfig.json
.moon/: workspace.yml
app/: build.gradle.kts  settings.gradle.kts
app/app/: build.gradle.kts
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
assistant/: Cargo.toml
assistant/src/: main.rs
core/: moon.yml  pyproject.toml
core/core/: __main__.py  config.py  core.py
core/core/endpoints/: __init__.py  health.py  root.py
core/core/endpoints/v0/: __init__.py  ask.py
core/core/handlers/: __init__.py
core/core/intents/: fallback.py  handlers.py  loader.py  processor.py
core/core/intents/nlu/: __init__.py  pattern.py
core/core/llm/: llm_client.py
core/core/llm/providers/: __init__.py  base.py  bitnet.py  gemini.py  mock.py  ollama.py  openai.py
core/core/skills/date/: __init__.py  handler.py
core/core/skills/fallback/: __init__.py  handler.py
core/core/skills/fallback/prompts/: __init__.py  system.py  templates.py
core/core/skills/time/: __init__.py  handler.py
core/core/skills/weather/: __init__.py  geocoding.py  handler.py
core/core/skills/weather/services/: __init__.py  mock.py  openweathermap.py
core/script/: run  test_llm_providers
echo/: moon.yml  pyproject.toml
echo/echo/: __init__.py  __main__.py  config.py
echo/echo/entity/: base.py  extractor.py  registry.py
echo/echo/intent/: base.py  matcher.py  registry.py
echo/echo/response/: renderer.py  selector.py
echo/echo/utils/: regex.py  text.py
echo/script/: run
intents/: time.yaml  weather.yaml
intents/entities/: datetime.yaml  location.yaml  quantity.yaml  weather.yaml
intents/mappings/: __init__.py  common.py  datetime.py  weather.py
intents/responses/: common.yaml  datetime.yaml  weather.yaml
intents/sentences/: datetime.yaml  weather.yaml
models/: .gitignore  download.sh  moon.yml
models/openwakeword/: hey_jim.tflite  hi_jim.tflite
models/whisper/: download.sh
providers/stt/: Cargo.toml
providers/stt/cloudflare/: Cargo.toml
providers/stt/cloudflare/src/: lib.rs
providers/stt/core/: Cargo.toml
providers/stt/core/src/: lib.rs
providers/stt/local/: Cargo.toml
providers/stt/local/src/: lib.rs
providers/stt/src/: config.rs  lib.rs
rpi/: Cargo.toml  go.mod
rpi/src/: main.rs
satellite/: moon.yml  pyproject.toml
satellite/satellite/: __main__.py  config.py  debug.py  microphone.py  satellite.py  speaker.py  wake.py  whisper.py
satellite/satellite/asr/: asr.py  google.py  vosk.py  whisper.py
satellite/satellite/core/: __init__.py  client.py
satellite/satellite/leds/: __init__.py  controller.py  effects.py  lantern.py
satellite/satellite/leds/drivers/: __init__.py  apa102.py  neopixel.py
satellite/satellite/tts/: piper.py  tts.py
satellite/script/: run
satellite_rust/: Cargo.toml
satellite_rust/src/: main.rs
satellite_rust/src/service/: mod.rs
vosk/: .gitignore
worker/: bun.lockb  package.json  wrangler.toml
(+93 files in other folders)
