[project]
name = "core"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jozef Steinhübl", email = "contact@xhyrom.dev"},
]
dependencies = ["fastapi>=0.115.11", "uvicorn>=0.34.0", "tomli>=2.2.1", "aiohttp>=3.12.4", "openai>=1.82.1", "google-genai>=1.18.0", "torch>=2.7.1", "transformers>=4.52.4", "accelerate>=1.7.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache License 2.0"}

[project.scripts]
satellite = "satellite:__main__.run"

[tool.pdm.dependencies]
echo = { path = "../echo" }

[tool.pdm]
distribution = false
