[project]
name = "satellite"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jozef Steinhübl", email = "contact@xhyrom.dev"},
]
dependencies = ["openwakeword>=0.6.0", "numpy<2.0", "pyaudio>=0.2.14", "faster-whisper>=1.1.1", "vosk>=0.3.45", "webrtcvad>=2.0.10", "piper-tts>=1.2.0", "SpeechRecognition>=3.14.1", "ctranslate2>=4.6.0", "aiohttp>=3.12.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache License 2.0"}

[project.scripts]
satellite = "satellite:__main__.run"

[tool.pdm]
distribution = false
