[package]
name = "stt"
version.workspace = true
edition.workspace = true

[features]
default = ["local"]
local = ["dep:stt-local"]
cloudflare = ["dep:stt-cloudflare"]

[dependencies]
stt-core = { path = "./core" }
stt-local = { path = "./local", optional = true }
stt-cloudflare = { path = "./cloudflare", optional = true }
